section 3td/list

--- a/index.html
+++ b/index.html
@@ -119,103 +119,103 @@
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Müştəri xidməti</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>İT və texnologiya</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Marketinq</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Müxtəlif peşələr</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Təsərrüfat</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Dizayn və incəsənət</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Tibb</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Təhlükəsizlik</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Satış</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Təchizat və logistika</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Sənaye və tikinti</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>HR və kargüzarlıq</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Turizm və istirahət</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Təhsil</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Nəqliyyat</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>Hüquq</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
                         <li class="card-list">
                             <a href="#">
-                                <h5>Maliyyə</h5>
+                                <h5>KİV və nəşriyyat</h5>
                                 <p><span>179</span></p>
                             </a>
                         </li>
@@ -391,8 +391,7 @@
                 <div class="anons">
                     <figure><a href="#"><img src="./assets/image/bbbbbbbbbbbbb.PNG" alt=""></a></figure>
                 </div>
-                <div class="helpful-section">
-                    
+                <div class="helpful-section">                    
                     <div class="helpful-advice-card-banner">
                         <div class="banner-helpful">
                             <h2>Faydalı məsləhətlər</h2>
